🎻🚪 Checkpoint ./style.css:58483456/60 ./login.html:58483456/919 ./index.html:58483456/273 ./cadastro.html:58483456/148

--- a/style.css
+++ b/style.css
@@ -140,7 +140,11 @@ ul {
     height: 50%;
 }
 
-.cadastro a {
+.link-cadastro a {
   text-decoration: none;
   color: blue;
+}
+
+.link-cadastro a:hover {
+  color: orange;
 }
