🐆🍇 Checkpoint ./login.html:58483456/294 ./style.css:58483456/209

--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@ ul {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  flex-direction: column;
+}
+
+.cada_login-input {
+  margin: 5px;
+  font-size: 18px;
 }
 
 .link-cadastro a {
