--- a/style.css
+++ b/style.css
@@ -135,19 +135,21 @@ ul {
 }
 
 .cada_login-input {
-  margin: 5px;
+  margin-bottom: 10px;
   font-size: 18px;
   width: 100%;
 }
 
 .enviar-button {
-  margin: 5px;
+  margin-bottom: 10px;
+  padding: 5px;
   font-size: 18px;
   color: white;
   border: none;
   background-color: rgba(16,83,117,255);
   width: 100%;
   transition: background-color 0.5s ease;
+  align-self: center;
 }
 
 .enviar-button:hover {
