--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ ul {
   background-color: rgba(16,83,117,255);
   color: white;
   padding: 20px 0;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
