🎙🛎 Checkpoint ./style.css:58517880/88 ./index.html:58517880/259 ./.glitch-assets:58517880/395

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ ul {
   background-color: rgba(16,83,117,255);
   color: white;
   padding: 20px 0;
-  position: fixed;
+  height: 40%;
   bottom: 0;
   width: 100%;
 }
