--- a/style.css
+++ b/style.css
@@ -138,6 +138,8 @@ ul {
 
 .login-container {
   display: flex;
+  margin: 3% auto;
+  padding: 10px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -145,14 +147,13 @@ ul {
   font-family: 'Quicksand', sans-serif;
   border-color: 1px solid black;
   height: 60vh;
+  background-color: #f2f2f2;
 }
 
 .login-input {
   margin-bottom: 10px;
   font-size: 18px;
   width: 100%;
-  border: 1px solid black;
-  boreder
 }
 
 .login-input:focus {
