😬🌋 Checkpoint ./login.html:58483456/176 ./style.css:58483456/46

--- a/style.css
+++ b/style.css
@@ -160,6 +160,14 @@ ul {
   box-shadow: 0 0 5px rgba(16, 83, 117, 0.7);
 }
 
+#identificador {
+  
+}
+
+#senha {
+  
+}
+
 .enviar-button {
   margin-bottom: 10px;
   margin-left: 4px;
