--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -15,15 +15,15 @@ ul {
 }
 
 .nav-bar {
-  background-color: #333333; 
-  color: #ffffff; 
-  width: 90%; 
+  background-color: #333333;
+  color: #ffffff;
+  width: 90%;
   max-width: 1200px; /* Largura máxima para evitar que a nave bar fique muito larga */
   margin: 0 auto; /* Centralizar a nave bar horizontalmente */
   height: 100px; /* Espessura (altura) da nave bar */
   display: flex;
-  justify-content: space-between; 
-  align-items: flex-end; 
+  justify-content: space-between;
+  align-items: flex-end;
   position: relative; /* Posição relativa para a linha */
 }
 
@@ -40,9 +40,9 @@ ul {
 .nav-bar ul {
   list-style-type: none;
   text-align: center; /* Centralizar os itens */
-  padding: 10px 0; 
+  padding: 10px 0;
   /* border-bottom: 2px solid #ff0000; */
-  flex-direction: column;/* Linha na parte inferior */
+  flex-direction: column; /* Linha na parte inferior */
 }
 
 .nav-bar li {
@@ -52,18 +52,18 @@ ul {
 
 .nav-bar a {
   text-decoration: none; /* Remover sublinhado dos links */
-  color: #0074cc; 
+  color: #0074cc;
   display: block;
 }
 /* Estilos para os nomes/link fora da nave bar */
 .nomes-links {
-  text-align: center; 
-  margin-top: 10px; 
+  text-align: center;
+  margin-top: 10px;
 }
 
 .nomes-links a {
   text-decoration: none;
-  color: #0074cc; 
+  color: #0074cc;
   margin: 0 20px;
   transition: color 0.3s;
 }
@@ -74,7 +74,7 @@ ul {
 }
 
 .footer {
-  background-color: rgba(16,83,117,255);
+  background-color: rgba(16, 83, 117, 255);
   color: white;
   padding: 20px 0;
   height: 40%;
@@ -108,8 +108,8 @@ ul {
   text-decoration: none;
 }
 
-.nomes-links a:hover{
-  color:orange;
+.nomes-links a:hover {
+  color: orange;
 }
 
 .footer ul {
@@ -121,21 +121,20 @@ ul {
   margin-bottom: 10px;
 }
 /* Estilize o ícone aqui, se necessário */
-        .icone {
-            width: 16px; /* Defina o tamanho do ícone conforme necessário */
-            height: 16px;
-            margin-right: 8px; /* Adicione um espaçamento à direita do ícone */
-            vertical-align: middle; /* Alinhe verticalmente com o texto */
+.icone {
+  width: 16px; /* Defina o tamanho do ícone conforme necessário */
+  height: 16px;
+  margin-right: 8px; /* Adicione um espaçamento à direita do ícone */
+  vertical-align: middle; /* Alinhe verticalmente com o texto */
 }
- /* Ajuste o espaçamento entre o ícone e o texto */
-        .icone-nome {
-            margin-left: -10px; /* Ajuste o valor conforme necessário */
-        }
+/* Ajuste o espaçamento entre o ícone e o texto */
+.icone-nome {
+  margin-left: -10px; /* Ajuste o valor conforme necessário */
+}
 /* Altere a cor do ícone quando estiver em foco (hover) */
-        .icone:hover {
-            fill: yellow; /* Cor amarela quando o mouse passa por cima */
-        }
-
+.icone:hover {
+  fill: yellow; /* Cor amarela quando o mouse passa por cima */
+}
 
 /* Media Query para telas pequenas, como celulares */
 @media {
@@ -143,11 +142,11 @@ ul {
 }
 
 .nav-bar li {
-    padding: 10px 0; 
-  }
+  padding: 10px 0;
+}
 
 .nomes-links {
-    margin-top: 20px; 
+  margin-top: 20px;
 }
 
 /* LOGIN */
@@ -160,7 +159,7 @@ ul {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   border-color: 1px solid black;
   height: 50vh;
   background-color: #f2f2f2;
@@ -177,15 +176,14 @@ ul {
 }
 
 #identificador {
-  background-image: url('https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/user.svg?v=1696384230548');
+  background-image: url("https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/user.svg?v=1696384230548");
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: right 10px center;
 }
 
-
 #senha {
-  background-image: url('https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/password.svg?v=1696384167340');
+  background-image: url("https://cdn.glitch.global/4a2b20e8-6502-4ec6-930c-69f52f144c5f/password.svg?v=1696384167340");
   background-size: 20px;
   background-repeat: no-repeat;
   background-position: right 10px center;
@@ -198,7 +196,7 @@ ul {
   font-size: 18px;
   color: white;
   border: none;
-  background-color: rgba(16,83,117,255);
+  background-color: rgba(16, 83, 117, 255);
   width: 100%;
   transition: background-color 0.5s ease;
   align-self: center;
