👏👘 Checkpoint ./index.html:58517880/242 ./style.css:58517880/164 ./cadastro.html:58517880/34848 ./login.html:58517880/42705

--- a/style.css
+++ b/style.css
@@ -133,6 +133,11 @@ ul {
 .icone:hover {
   fill: orange; 
 }
+.icon-hover:hover {
+    fill: orange; /* Altera a cor de preenchimento para laranja */
+    transition: fill 0.3s ease; /* Adiciona uma transição suave de cor */
+}
+
 
 /* Media Query para telas pequenas, como celulares */
 @media {
