--- a/style.css
+++ b/style.css
@@ -151,12 +151,13 @@ ul {
 .nomes-links {
   margin-top: 20px;
 }
-/* Solicitar */
+
+/* Solicitar atendimento*/
 .solicitar-conteiner{
   display: flex;
   margin: 3% auto;
   padding: 10px;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   flex-direction: column;
   text-align: center;
@@ -164,6 +165,22 @@ ul {
   border-color: 1px solid black;
   height: 50vh;
   background-color: #f2f2f2;
+}
+
+.solicitar-conteiner label {
+    flex: 1;
+    font-weight: bold;
+    margin-right: 10px;
+    text-align-last: justify;
+
+}
+
+.solicitar-conteiner input {
+    flex: 2;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
 }
 
 
