--- a/style.css
+++ b/style.css
@@ -150,12 +150,11 @@ ul {
 
 /* Solicitar atendimento*/
 .img-solicitar img {
-  max-width: 30%;
+  max-width: 40%;
   float: right;
   height: auto;
-  margin-top: 55px;
+  margin-top: 80px;
   margin-right: 50px;
-  
 }
 .solicitar-conteiner {
   margin: 70px;
@@ -189,6 +188,7 @@ ul {
 .solicitar-conteiner input[type="text"],
 input[type="datetime-local"] {
   width: 350px;
+  margin-bottom: 20px;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 3px;
