🏂📒 Checkpoint ./cadastro.html:58483456/9 ./style.css:58483456/14

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ input[type="datetime-local"] {
   align-self: center;
 }
 
-.enviar-button:hover {
+.enviar-botã:hover {
   cursor: pointer;
   color: orange;
   box-shadow: 0 0 5px rgba(16, 83, 117, 0.7);
