--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul {
 }
 
 .nav-bar {
-  background-color: #263138;
+  background-color: #75BFAB;
   color: #ffffff;
   width: 100%;
   margin: 0 auto; /* Centralizar a nave bar horizontalmente */
@@ -30,7 +30,7 @@ ul {
   left: 0;
   width: 100%;
   height: 4px; /* Espessura (altura) da linha */
-  background-color: orange;
+  background-color: #526175;
 }
 
 .nav-bar ul {
@@ -59,7 +59,7 @@ ul {
 
 .nomes-links a {
   text-decoration: none;
-  color: #0074cc;
+  color: #68A897;
   margin: 0 20px;
   transition: color 0.3s;
 }
@@ -318,7 +318,7 @@ input[type="datetime-local"] {
   align-self: center;
 }
 
-.enviar-botã:hover {
+.enviar-button:hover {
   cursor: pointer;
   color: orange;
   box-shadow: 0 0 5px rgba(16, 83, 117, 0.7);
