--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul {
   left: 0;
   width: 100%;
   height: 4px; /* Espessura (altura) da linha */
-  background-color: #526175;
+  background-color: #68A897;
 }
 
 .nav-bar ul {
@@ -59,13 +59,13 @@ ul {
 
 .nomes-links a {
   text-decoration: none;
-  color: #68A897;
+  color: #75BFAB;
   margin: 0 20px;
   transition: color 0.3s;
 }
 
 .footer {
-  background-color: rgba(16, 83, 117, 255);
+  background-color: #68A897;
   color: white;
   padding: 20px 0;
   height: 40%;
@@ -275,7 +275,7 @@ input[type="datetime-local"] {
   justify-content: center;
   flex-direction: column;
   text-align: center;
-  font-family: "Quicksand", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   border-color: 1px solid black;
   height: 50vh;
   background-color: #f2f2f2;
