--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ ul {
 .nomes-links {
   text-align: center;
   margin-top: 10px;
+  font-size: 18px
 }
 
 .nomes-links a {
@@ -213,7 +214,6 @@ ul {
   margin: 70px;
   float: left;
   width: 40%;
-  /*background-color: #f8f8f8;*/
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -229,7 +229,13 @@ ul {
   display: inline-block;
   width: 150px;
   font-weight: bold;
+  color: #526175;
 }
+
+.solicitar-conteiner h1 {
+  color: #75BFAB;
+}
+
 .solicitar-conteiner select {
   width: 370px;
   padding: 10px;
@@ -252,7 +258,7 @@ input[type="datetime-local"] {
   width: 97%;
   margin-top: 10px;
   padding: 10px;
-  background-color: black;
+  background-color: #75BFAB;
   color: #ffffff;
   font-weight: bold;
   border: none;
