--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ ul {
 .nomes-links {
   text-align: center;
   margin-top: 10px;
-  font-size: 18px
+  font-size: 19px
 }
 
 .nomes-links a {
@@ -282,10 +282,10 @@ input[type="datetime-local"] {
   flex-direction: column;
   text-align: center;
   font-family: 'Montserrat', sans-serif;
-  border-color: 1px solid black;
+  border: 1px solid rgb(210, 206, 214);
+  border-radius: 20px;
   height: 50vh;
-  background-color: #f2f2f2;
-}
+  }
 
 .login-input {
   margin-bottom: 10px;
