💠👩‍👩‍👦 Checkpoint ./Solicitar.html:58483452/510 ./index.html:58483452/87 ./style.css:58483452/458

--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ ul {
 .nomes-links {
   text-align: center;
   margin-top: 10px;
-  font-size: 20px
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .nomes-links a {
@@ -216,6 +217,7 @@ ul {
   width: 40%;
   padding: 20px;
   border-radius: 5px;
+  border: 2px solid red;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   text-align: left;
   overflow: hidden; /* Adicionando overflow para conter o float */
@@ -230,10 +232,12 @@ ul {
   width: 150px;
   font-weight: bold;
   color: #526175;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .solicitar-conteiner h1 {
   color: #75BFAB;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .solicitar-conteiner select {
@@ -252,6 +256,7 @@ input[type="datetime-local"] {
   border: 1px solid #ccc;
   border-radius: 3px;
   font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
 }
 .solicitar-conteiner button {
   display: block;
