🕵⛩ Checkpoint ./.glitch-assets:58483462/1340 ./Solicitar.html:58483462/385 ./index.html:58483462/1287 ./style.css:58483462/158

--- a/style.css
+++ b/style.css
@@ -289,6 +289,10 @@ input[type="datetime-local"] {
   cursor: pointer;
 }
 
+.profissional img{
+  width: 250px;
+  border-radius: 20px;
+}
 /*SLAIDE INICIAL*/
 .imagem-inicial img{
   margin-top: 10px;
