🎒🎫 Checkpoint ./index.html:58483462/838:58517880/10930 ./style.css:58483462/32 ./.glitch-assets:58483462/2725 ./cadastro.html:58517880/46757 ./login.html:58517880/23190

--- a/style.css
+++ b/style.css
@@ -288,7 +288,14 @@ input[type="datetime-local"] {
   border-radius: 4px;
   cursor: pointer;
 }
+.profissionais{
+  display: flex;
+  justify-content: space-around;
+}
 
+h1{ color: #263138;
+  text-align: center;
+}
 .profissional img{
   width: 250px;
   border-radius: 20px;
