--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ input[type="datetime-local"] {
 
 h1{ color: #263138;
   text-align: center;
-  text-size: 50px;
+  font-size: 50px
 }
 .profissional img{
   width: 250px;
